Se agregan mas modulos

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,29 +1,48 @@
 ---
-- name: "Ver gather"
-  debug:
-    var: ansible_facts
-- name: "Obtener hostnames"
+# - name: "Ver gather"
+#   debug:
+#     var: ansible_facts
+#- name: "Capturar service facts"
+#  ansible.builtin.service_facts:
+#- name: "Estado de los servicios"
+#  ansible.builtin.debug:
+#    var: ansible_facts.services
+# - name: "Obtener hostnames"
+#   ansible.builtin.import_tasks:
+#       file: hostname.yml
+# - name: "Memoria"
+#   ansible.builtin.import_tasks:
+#       file: memoria.yml
+# - name: "red_ip"
+#   ansible.builtin.import_tasks:
+#       file: red_ip.yml
+# - name: "Dates"
+#   ansible.builtin.import_tasks:
+#       file: date_time.yml
+# - name: "cpus"
+#   ansible.builtin.import_tasks:
+#       file: cpu.yml
+# - name: "uptime"
+#   ansible.builtin.import_tasks:
+#       file: uptime.yml
+# - name: "ips"
+#   ansible.builtin.import_tasks:
+#       file: ips.yml
+# - name: "dev_ips"
+#   ansible.builtin.import_tasks:
+#       file: dev_ips.yml
+# - name: "rhelvf"
+#   ansible.builtin.import_tasks:
+#       file: rhelvf.yml
+# - name: "kernel"
+#   ansible.builtin.import_tasks:
+#       file: kernel.yml
+# - name: "ntpstat"
+#   ansible.builtin.import_tasks:
+#     file: ntpstat_ntpenab.yml
+# - name: "ntpfile"
+#   ansible.builtin.import_tasks:
+#     file: ntpfile.yml
+- name: "sntpss"
   ansible.builtin.import_tasks:
-      file: hostname.yml
-- name: "Memoria"
-  ansible.builtin.import_tasks:
-      file: memoria.yml
-- name: "red_ip"
-  ansible.builtin.import_tasks:
-      file: red_ip.yml
-- name: "Dates"
-  ansible.builtin.import_tasks:
-      file: date_time.yml
-- name: "cpus"
-  ansible.builtin.import_tasks:
-      file: cpu.yml
-- name: "uptime"
-  ansible.builtin.import_tasks:
-      file: uptime.yml
-- name: "ips"
-  ansible.builtin.import_tasks:
-      file: ips.yml
-- name: "dev_ips"
-  ansible.builtin.import_tasks:
-      file: dev_ips.yml
-
+    file: sntpss.yml
